# glTF-renderer

./: .gitmodules  CMakeLists.txt  glTF-renderer.filters  glTF-renderer.sln  glTF-renderer.vcxproj  main.cpp
shaders/: fragment_shader.txt  vertex_shader.txt
src/: main.cpp  shader.h
